# cobo

./: .gitignore  Dockerfile  README.md  benchmark.py  build_db.py  compose.yaml  flake.nix  pyproject.toml  server.py  srv.sh  test_search.py
lib/: data_processing.py  vector_utils.py
sample_docs/: config.toml  database_sample.md  timet$.md  timet$2gai1.md  timet$2gai2.md  timet$A1.md  timet$A2.md  timet$A3.md  timet$A4.md  timet$A5.md  timet$A6.md  timet$A7.md  timet$A8.md  timet$B1.md  timet$B2.md  timet$B3.md  timet$B4.md  timet$B5.md  timet$B6.md  timet$B7.md  timet$B8.md  timet$English1.md  timet$English2.md  timet$English3.md  timet$English4.md  timet$INFOSS.md  timet$bessi.md  timet$gakuiki-risyu.md  timet$henkouA.md  timet$henkouB.md  timet$ie-english.md  timet$ie-intensive-zen.md  timet$iedoc-kou.md  timet$iedoc-zen.md  timet$iemas-i-kou.md  timet$iemas-i-zen.md  timet$iemas-j-kou.md  timet$iemas-j-zen.md  timet$iemas-kou.md  timet$iemas-m-kou.md  (+22 more)
sample_docs/converted/www.muse.or.jp/: uec_muse7$about$about.html.md  uec_muse7$about$about2.html.md  uec_muse7$access$access.html.md  uec_muse7$archive$archive01.html.md  uec_muse7$chrono$chrono01.html.md  uec_muse7$dawn$dawn01.html.md  uec_muse7$dawn$dawn02.html.md  uec_muse7$dawn$dawn03.html.md  uec_muse7$dawn$dawn04.html.md  uec_muse7$dawn$dawn05.html.md  uec_muse7$dawn$dawn06.html.md  uec_muse7$dawn$dawn07.html.md  uec_muse7$dawn$dawn08.html.md  uec_muse7$dawn$dawn09.html.md  uec_muse7$dawn$dawn10.html.md  uec_muse7$dawn$dawn11.html.md  uec_muse7$dawn$dawn12.html.md  uec_muse7$exhibit$exhibit01.html.md  (+25 more)
(+43 files in other folders)
