[project]
name = "rag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.0",
    "markdown>=3.8",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
